# porthole

./: meson.build  meson.options
.cache/clangd/index/: _debug_prints.h.958D1F50A8153D63.idx  atom.c.BFD3CD41AC073BA5.idx  atom.h.D042AF3DCB2A654C.idx  atom_tests.c.AD284D7CEABC5729.idx  common.c.ECACC42F0D32F0CE.idx  common.h.8E4FAE7A4C8B4495.idx  common.h.F362431F0F82362C.idx  repo.c.5F001DDE8280AFDC.idx  repo.h.67E50CD42AA2B3DF.idx  repo_everything_test.c.707941264B3956F7.idx  str.c.D01576E3DF2D7A5C.idx  str.h.C42495695AEF0D36.idx  string_test.c.D5D0E30DA5A7D5A0.idx  types.h.FE85D44311CE8508.idx  use.c.89F0CACD71E4DCD6.idx  use.h.BD6EFAE865D8420A.idx  validation_tests.c.C376EDCB6BA77DA1.idx  version.c.DC4593C20FEF1B51.idx  version.h.03CC9933E2B46D3E.idx
libporthole/: atom.c  config.h.in  dbcommon.c  ebuild.c  meson.build  repo.c  use.c  version.c
libporthole/data/: add_pkg.sql  ebuild_spawn_proc.sh  meson.build  pkg_exists.sql  setup.sql
libporthole/db/: meson.build
libporthole/db/sqlite/: meson.build  sqlitedb.c
libporthole/include/: atom.h  common.h  database.h  dbcommon.h  ebuild.h  repo.h  str.h  types.h  use.h  version.h
libporthole/util/: common.c  meson.build  str.c
src/: meson.build
src/phcache/: cache_spawner.c  cache_spawner.h  main.c  meson.build
test/: meson.build
test/unit/: meson.build
test/unit/libporthole/: _debug_prints.h  atom_tests  atom_tests.c  common_test.c  database_tests.c  ebuild_proc_test.c  meson.build  repo_everything_test.c  repo_md5_cache_test.c  string_test.c  validation_tests.c
